# zylib

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Docs/: Allocator.md
include/: zylib_alloc.h  zylib_allocator.h  zylib_def.h  zylib_dequeue.h  zylib_error.h  zylib_log.h  zylib_thread.h
private/include/: zylib_private_allocator.h  zylib_private_box.h  zylib_private_dequeue.h  zylib_private_error.h  zylib_private_logger.h
private/src/: zylib_private_allocator.c  zylib_private_box.c  zylib_private_dequeue.c  zylib_private_error.c  zylib_private_logger.c
public/include/: zylib_allocator.h  zylib_allocator_def.h  zylib_def.h  zylib_dequeue.h  zylib_error.h  zylib_log.h  zylib_logger.h  zylib_logger_def.h
public/src/: zylib_allocator.c  zylib_dequeue.c  zylib_error.c  zylib_log.c  zylib_logger.c
src/: zy_err.c  zylib_alloc.c  zylib_allocator.c  zylib_dequeue.c  zylib_err.c  zylib_error.c  zylib_log.c  zylib_thread.c
src/lib/include/: zylib_box.h  zylib_lib_box.h
src/lib/src/: zylib_box.c  zylib_lib_box.c
test/: CMakeLists.txt
test/src/: alloc.c  box.c  dequeue.c  error.c  lib_box.c  test_zylib_allocator.c  test_zylib_dequeue.c  test_zylib_error.c  test_zylib_private_box.c
