add_executable(test_zylib_allocator src/test_zylib_allocator.c)
target_link_libraries(test_zylib_allocator zylib)

add_executable(test_zylib_dequeue src/test_zylib_dequeue.c)
target_link_libraries(test_zylib_dequeue zylib)

add_executable(test_zylib_error src/test_zylib_error.c)
target_link_libraries(test_zylib_error zylib)

add_executable(test_zylib_private_box src/test_zylib_private_box.c)
target_link_libraries(test_zylib_private_box zylib)
target_include_directories(test_zylib_private_box PRIVATE ../private/include)

add_test(NAME test_zylib_allocator COMMAND test_zylib_allocator)
add_test(NAME test_zylib_dequeue COMMAND test_zylib_dequeue)
add_test(NAME test_zylib_error COMMAND test_zylib_error)
add_test(NAME test_zylib_private_box COMMAND test_zylib_private_box)